 * @copyright       Copyright © 2023  - 2024 brambring.nl - All Rights Reserved
 * @license         GNU General Public License version 3 or later
 * This is the change log for the component com_blc, the content plugin plg_blc_content and the system plugin plg_system_blc
 */
/**
  * + Addition
  * - Removal
  * ^ Change
  * # Fix
  * ! Security
  * L Language
  * N Note
  */
  ^ reworked filters (View & Fix Links) to show correct link count
  + Added ping function to external plugin
24.44.6355
  + Parked domain detection
24.44.6343
  ^ Code cleanup php-cs-fixer and phpcs
  ^ Removed public blcReport from system plugin. Replaced with onBlcReport event.
  + Added table (--print) output to CLI  blc:report
  + Added resume option to Scheduled Tasks
  + Added locking. only one running broken link checker per server/site
  # Added check to ensure the Reponse is valid multibye before trying to store it in the database.
  ^ Converter to Extractor to event
24.44.6312
   ^ Improved installer for pseudo cron
   ^ Code cleanup 
24.44.6306
 # CLI Checker not working deu to wrong default value
24.44.6301
 ^ CURLOPT_ENCODING from identity to empty. Signatures should provide Accept-encoding
 L Updated a lot of language strings
24.05.6286
 # Reverted removal of depricated Toolbar:getInstance. Too early for Joomla 4
24.05.6283
 L updated plurals
24.05.6274
 - Removed amazon from the provider/oembed plugin.
 # Typo in the menu plugin.
24.05.6261
 + Added option to select/add different CA Bundle
24.05.6251
 # Split 'broken' into 'broken','warning' and 'timeout' on Setup & Maintenance page
 + Added warning on disabled System - BLC plugin to admin pseudo cron and Setup page
24.05.6247
 ^ The HTTP and Task check jobs will now fetch new links for each throttled domain. So after a run the actual amount of checked links is the configured number (if avaiable). For the CLI use the sleep mode to keep going.
24.04.6237
 + Added Joomla Scheduler Tasks
24.04.6232