@@ -102,6 +102,7 @@ COM_BLC_OPTION_REPSONSE_ALL="Response"
 COM_BLC_FILTER_SPECIAL="Check state"
 COM_BLC_OPTION_SPECIAL_ALL="State"
 COM_BLC_OPTION_WITH_TIMEOUT="With timeout"
+COM_BLC_OPTION_WITH_TOCHECK="Pending"
 COM_BLC_OPTION_WORKING_0="Show unmarked"
 COM_BLC_OPTION_WORKING_1="Mark as Working"
 COM_BLC_OPTION_WORKING_3="Marked to Hide"
